<resources>
    <string name="app_name">Book Store Inventory</string>
    <string name="editor_activity_title_new_product">Add new product</string>
    <string name="details_activity_title">Product details</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="quantity_below_zero_message">Quantity cannot be below 0!</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_empty_fields">None of the fields can be empty!</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="remove_dialog_msg">Remove this product?</string>
    <string name="remove_all_products_dialog_msg">Remove all products?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="editor_remove_product_successful">Product removed</string>
    <string name="editor_remove_product_failed">Error with removing product</string>
    <string name="action_remove_all_entries">Remove all products</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="dollar_sign">$&#032;</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="order_product_button">Order Product</string>
    <string name="decrease_quantity_button">Decrease Quantity</string>
    <string name="increase_quantity_button">Increase Quantity</string>
    <string name="store_empty_text_view">The Book Store is empty&#8230;</string>
    <string name="instruction_text_view">Tap on a plus button to add new product. Remember, all fields are required!</string>
    <string name="sale_button_text_view">Sale</string>
    <string name="sold_button_text_view">Sold</string>
    <string name="quantity_units">&#032;pcs</string>
</resources>
