<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large">

        <TextView
            style="@style/product_labels_text_view"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/product_name_details"
            style="@style/details_text_view"
            tools:text="Product Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large">

        <TextView
            style="@style/product_labels_text_view"
            android:text="@string/product_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/details_price_text_view"
                android:text="@string/dollar_sign" />

            <TextView
                android:id="@+id/product_price_details"
                style="@style/details_price_text_view"
                tools:text="9.99" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large">

        <TextView
            style="@style/product_labels_text_view"
            android:text="@string/product_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/product_quantity_details"
                style="@style/details_quantity_text_view"
                tools:text="999" />

            <TextView
                style="@style/details_text_view"
                android:text="@string/quantity_units" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large">

        <TextView
            style="@style/product_labels_text_view"
            android:text="@string/product_supplier_name" />

        <TextView
            android:id="@+id/product_supplier_name_details"
            style="@style/details_text_view"
            tools:text="Supplier Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large">

        <TextView
            style="@style/product_labels_text_view"
            android:text="@string/product_supplier_phone_number" />

        <TextView
            android:id="@+id/product_supplier_phone_number_details"
            style="@style/details_text_view"
            tools:text="888 888 888" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large">

        <Button
            android:id="@+id/order_button"
            style="@style/button_details"
            android:text="@string/order_product_button" />

        <Button
            android:id="@+id/decrease_quantity_button"
            style="@style/button_details"
            android:text="@string/decrease_quantity_button" />

        <Button
            android:id="@+id/increase_quantity_button"
            style="@style/button_details"
            android:text="@string/increase_quantity_button" />
    </LinearLayout>
</LinearLayout>