<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/product_name_main"
        style="@style/product_name"
        tools:text="Product Name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_product_info"
                android:text="@string/dollar_sign" />

            <TextView
                android:id="@+id/product_price_main"
                style="@style/add_product_info"
                tools:text="9.99" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_quantity_main"
                style="@style/add_product_info"
                tools:text="999" />

            <TextView
                style="@style/add_product_info"
                android:text="@string/quantity_units" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sale_button_main"
        style="@style/button"
        android:text="@string/sale_button_text_view" />

</LinearLayout>